tests/ui/has-expr-argument.stderr
error: this attribute takes from one to three assign arguments

         = help: use `#[server_send(level=Level::WARN, name="Name", skip=[a, b])]`

 --> tests/ui/has-expr-argument.rs:3:15
  |
3 | #[server_send(true)]
  |               ^^^^
